fixed left side alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -83,7 +83,7 @@ body {
 }
 
 #left-column h3 {
-    margin-bottom: 0;
+    margin-bottom: 15px;
 }
 
 footer {
